--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,9 +26,9 @@ body {
 }
 
 .menu-button {
-  @apply flex items-center justify-center gap-2 rounded-md px-4 py-3 transition-colors ease-in hover:bg-zinc-200 active:bg-zinc-300 dark:hover:bg-zinc-800 dark:active:bg-zinc-700;
+  @apply flex items-center justify-center gap-2 rounded-md px-4 py-3 transition-colors hover:bg-zinc-200 active:bg-zinc-300 dark:hover:bg-zinc-800 dark:active:bg-zinc-700;
 }
 
 .menu-button--active {
-  @apply flex items-center justify-center gap-2 rounded-md bg-zinc-200 px-4 py-3 transition-colors ease-in hover:bg-zinc-300 active:bg-zinc-400 dark:bg-zinc-800 dark:hover:bg-zinc-700 dark:active:bg-zinc-600;
+  @apply flex items-center justify-center gap-2 rounded-md bg-zinc-200 px-4 py-3 transition-colors hover:bg-zinc-300 active:bg-zinc-400 dark:bg-zinc-800 dark:hover:bg-zinc-700 dark:active:bg-zinc-600;
 }
